tests/fixtures/invalid/missing_meta.ko
// This module intentionally lacks a meta block.
// In a full implementation, the semantic analyzer would reject this.
module no_meta {
    fn main() {
    }
}
